--- a/examples/simple/build.gradle
+++ b/examples/simple/build.gradle
@@ -1,40 +1,28 @@
-# gradle-plugin
-
-A Gradle plugin for running XML Calabash 3.x tasks.
-
-Add the plugin to your `plugins`:
-
-```
-plugins {
-  id 'com.xmlcalabash.gradle.xmlcalabash' version '0.0.1'
+buildscript {
+  repositories {
+    mavenCentral()
+    maven { url "https://maven.restlet.com" }
+    maven { url "https://dev.saxonica.com/maven" }
   }
-```
+}
 
-Import the task type:
+plugins {
+  // This is a dummy version number — use the actual latest version number
+  // instead.
+  id 'com.xmlcalabash.gradle.xmlcalabash' version '1.0-SNAPSHOT'
+}
 
-```
 import com.xmlcalabash.gradle.XmlCalabashTask
-```
 
-Create tasks of that type:
-
-```
 task xmlidentity(type: XmlCalabashTask) {
   pipeline 'pipe.xpl'
   input "pipe.xpl"
   output('result', 'output.xml')
 }
-```
 
-Use a map to specify non-XML documents:
-
-```
 task jsonidentity(type: XmlCalabashTask) {
   pipeline 'pipe.xpl'
   input(["file": "doc.json", "content-type": "json"])
   output('result', 'output.json')
   option("test", 5)
 }
-```
-
-More documentation T.B.D.
