--- a/examples/simple/build.gradle
+++ b/examples/simple/build.gradle
@@ -1,28 +1,32 @@
-buildscript {
-  repositories {
-    mavenCentral()
-    maven { url "https://maven.restlet.com" }
-    maven { url "https://dev.saxonica.com/maven" }
-  }
-}
-
 plugins {
-  // This is a dummy version number — use the actual latest version number
-  // instead.
+  // This is a dummy version number because the extension is
+  // referenced directly in settings.gradle. Use the real
+  // version number in your build scripts
   id 'com.xmlcalabash.gradle.xmlcalabash' version '1.0-SNAPSHOT'
 }
 
 import com.xmlcalabash.gradle.XmlCalabashTask
 
-task xmlidentity(type: XmlCalabashTask) {
+task identity(type: XmlCalabashTask) {
   pipeline 'pipe.xpl'
-  input "pipe.xpl"
-  output('result', 'output.xml')
+  input "source", "doc.xml"
+  output "result", "output.xml"
+
+  // Always run the task, even when Gradle would ordinarily think it
+  // was up-to-date, just because it makes these little examples
+  // easier to use. Otherwise Gradle will think the task is
+  // "up-to-date" and doesn't need to be run unless you change doc.xml
+  // or delete output.xml between every call.
+  outputs.upToDateWhen { false }
 }
 
-task jsonidentity(type: XmlCalabashTask) {
-  pipeline 'pipe.xpl'
-  input(["file": "doc.json", "content-type": "json"])
-  output('result', 'output.json')
-  option("test", 5)
+task stamp(type: XmlCalabashTask) {
+  pipeline 'timestamp.xpl'
+  input "source", "doc.xml"
+  output "result", "stamped.xml"
+  if (project.hasProperty('timestamp')) {
+    option 'timestamp', timestamp
+  }
+
+  outputs.upToDateWhen { false }
 }
